# developer-test

./: Makefile  README.md  docker-compose.yml
.circleci/: config.yml
backend/: .gitignore  Dockerfile  log_config.json  pylint_allowed_words.txt  pyproject.toml
backend/.devcontainer/: devcontainer.json  docker-compose.yml
backend/src/backend/: cli.py  config.py  data_contract.py  db.py  main.py  odds.py  utils.py
backend/tests/: conftest.py  test_cli.py  test_odds.py
original/examples/back_again/: empire.json  universe.db
original/examples/long_wait/: empire.json  universe.db
original/examples/simple_ok/: empire.json
